--- a/linechart3/multi-line-full.html
+++ b/linechart3/multi-line-full.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <style>
       body {
-        font: 9px sans-serif;
+        font: 12px sans-serif;
         color: #121401;
       }
       .axis path,
@@ -19,13 +19,13 @@
     </style>
   </head>
   <body>
-    <h2 style="padding-left:60px;">Total Funding Rounds in CrunchBase by Year</h2>
+    <h2 style="padding-left:60px;">Felony Offenses and Summonses Issued (2007-2014)</h2>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
     <script>
       var margin = {top: 20, right: 55, bottom: 30, left: 40},
-          width  = 1000 - margin.left - margin.right,
+          width  = 600 - margin.left - margin.right,
           height = 500  - margin.top  - margin.bottom;
 
       var x = d3.scale.ordinal()
