--- a/linechart3/multi-line-full.html
+++ b/linechart3/multi-line-full.html
@@ -48,7 +48,7 @@
           .y(function (d) { return y(d.value); });
 
       var color = d3.scale.ordinal()
-          .range(["#001c9c","#101b4d","#475003","#9c8305","#d3c47c"]);
+          .range(["#ff4500","#101b4d","#475003","#9c8305","#d3c47c"]);
 
       var svg = d3.select("body").append("svg")
           .attr("width",  width  + margin.left + margin.right)
