--- a/streamgraph/streamgraph-full.html
+++ b/streamgraph/streamgraph-full.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <h2 style="padding-left:60px;">Summons by Type over Time (2007-2015)</h2>
+    <h2 style="padding-left:60px;">Top 10 Summons by Type over Time (2007-2015)</h2>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
