--- a/icicle/index.html
+++ b/icicle/index.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+<!--ICICLE-->
 <meta charset="utf-8">
 <style>
 
@@ -9,7 +10,7 @@
 }
 
 .label {
-  font: 10px sans-serif;
+  font: 14px sans-serif;
   text-anchor: middle;
 }
 
