--- a/partition/index.html
+++ b/partition/index.html
@@ -36,8 +36,8 @@ text {
   <body>
     <div id="body">
       <div id="footer">
-        d3.layout.partition
-        <div class="hint">click or option-click to descend or ascend</div>
+        Participatory Budgeting Projects
+        <div class="hint">click to see more</div>
       </div>
     </div>
     <script type="text/javascript">
