--- a/partition/index.html
+++ b/partition/index.html
@@ -72,6 +72,7 @@ d3.json("flare.json", function(root) {
       .attr("width", root.dy * kx)
       .attr("height", function(d) { return d.dx * ky; })
       .attr("class", function(d) { return d.children ? "parent" : "child"; });
+      .style("fill", function(d) { return color((d.children ? d : d.parent).name); })
 
   g.append("svg:text")
       .attr("transform", transform)
