--- a/partition/index.html
+++ b/partition/index.html
@@ -47,6 +47,8 @@ var w = 900,
     x = d3.scale.linear().range([0, w]),
     y = d3.scale.linear().range([0, h]);
 
+var color = d3.scale.category20c();
+
 var vis = d3.select("#body").append("div")
     .attr("class", "chart")
     .style("width", w + "px")
@@ -64,6 +66,7 @@ d3.json("flare.json", function(root) {
       .data(partition.nodes(root))
     .enter().append("svg:g")
       .attr("transform", function(d) { return "translate(" + x(d.y) + "," + y(d.x) + ")"; })
+      .style("fill", function(d) { return color((d.children ? d : d.parent).name); })
       .on("click", click);
 
   var kx = w / root.dx,
@@ -72,7 +75,6 @@ d3.json("flare.json", function(root) {
   g.append("svg:rect")
       .attr("width", root.dy * kx)
       .attr("height", function(d) { return d.dx * ky; })
-      .style("fill", function(d) { return color((d.children ? d : d.parent).name); })
       .attr("class", function(d) { return d.children ? "parent" : "child"; });
 
 
