--- a/partition/index.html
+++ b/partition/index.html
@@ -35,7 +35,7 @@ text {
   </head>
   <body>
     <div id="body">
-    
+
     </div>
     <script type="text/javascript">
 
@@ -44,7 +44,7 @@ var w = 900,
     x = d3.scale.linear().range([0, w]),
     y = d3.scale.linear().range([0, h]);
 
-var color = d3.scale.category20();
+var color = d3.scale.category20c();
 
 var vis = d3.select("#body").append("div")
     .attr("class", "chart")
