added missing bit

--- a/sunburstlabel/index.html
+++ b/sunburstlabel/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--http://bl.ocks.org/vgrocha/1580af34e56ee6224d33-->
 <meta charset="utf-8">
 <style>
 
@@ -268,3 +269,5 @@ function updateArc(d) {
 }
 
 d3.select(self.frameElement).style("height", margin.top + margin.bottom + "px");
+
+</script>
