--- a/partition/index.html
+++ b/partition/index.html
@@ -45,7 +45,7 @@ var w = 900,
     x = d3.scale.linear().range([0, w]),
     y = d3.scale.linear().range([0, h]);
 
-var color = d3.scale.category20c();
+var color = d3.scale.category10();
 
 var vis = d3.select("#body").append("div")
     .attr("class", "chart")
