--- a/partition/index.html
+++ b/partition/index.html
@@ -14,7 +14,7 @@
   margin-top: 60px;
   margin-left: 0px;
   font-size: 18px;
-  color: gray;
+
 }
 
 rect {
@@ -30,7 +30,7 @@ rect.parent {
 
 text {
   pointer-events: none;
-  color: gray;
+
 
 }
 
@@ -87,6 +87,7 @@ d3.json("flare.json", function(root) {
       .attr("dy", ".35em")
       .style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; })
       .text(function(d) { return d.name; })
+      .style("fill", function(d) { return color((d.children ? d : d.parent).name); })
 
 
   d3.select(window)
