--- a/partition/index.html
+++ b/partition/index.html
@@ -88,7 +88,7 @@ d3.json("flare.json", function(root) {
       .attr("dy", ".35em")
       .style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; })
       .text(function(d) { return d.name; })
-      .style("fill", function(d) { return d.color; });
+      .style("fill", "red");
 
 
   d3.select(window)
