changed color to 20c

--- a/partition/index.html
+++ b/partition/index.html
@@ -48,7 +48,7 @@ var w = 700,
     x = d3.scale.linear().range([0, w]),
     y = d3.scale.linear().range([0, h]);
 
-var color = d3.scale.category10();
+var color = d3.scale.category20c();
 
 var vis = d3.select("#body").append("div")
     .attr("class", "chart")
