--- a/barhierarchy/index.html
+++ b/barhierarchy/index.html
@@ -10,9 +10,7 @@
 svg {
   font-size: 14px;
 }
-.chart {
-  margin-left: 50px;
-}
+
 rect.background {
   fill: none;
   pointer-events: all;
@@ -36,12 +34,12 @@ rect.background {
     <script type="text/javascript" src="d3/d3.layout.js"></script>
     <script type="text/javascript">
 
-var m = [80, 160, 0, 200], // top right bottom left
+var m = [80, 160, 0, 300], // top right bottom left
     w = 1280 - m[1] - m[3], // width
     h = 800 - m[0] - m[2], // height
     x = d3.scale.linear().range([0, w]),
     y = 25, // bar height
-    z = d3.scale.ordinal().range(["steelblue", "#aaa"]); // bar color
+    z = d3.scale.ordinal().range(["salmon", "#aaa"]); // bar color
 
 var hierarchy = d3.layout.partition()
     .value(function(d) { return d.size; });
