changed back to pink

--- a/barhierarchy/index.html
+++ b/barhierarchy/index.html
@@ -39,7 +39,7 @@ var m = [80, 160, 0, 300], // top right bottom left
     h = 800 - m[0] - m[2], // height
     x = d3.scale.linear().range([0, w]),
     y = 25, // bar height
-//    z = d3.scale.ordinal().range(["salmon", "#aaa"]); // bar color
+    z = d3.scale.ordinal().range(["salmon", "#aaa"]); // bar color
 
 var color = d3.scale.category10();
 
@@ -55,7 +55,7 @@ var svg = d3.select("body").append("svg:svg")
     .attr("height", h + m[0] + m[2])
   .append("svg:g")
     .attr("transform", "translate(" + m[3] + "," + m[0] + ")");
-      .style("fill", function(d) { return color((d.children ? d : d.parent).name); });
+
 
 svg.append("svg:rect")
     .attr("class", "background")
