--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -71,7 +71,7 @@
           };
         });
 
-        x.domain(data.map(function (d) { return d.date; }));
+        x.domain(data.map(function (d) { return d.quater; }));
         y.domain([
           d3.min(seriesData, function (c) {
             return d3.min(c.values, function (d) { return d.value; });
