--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -25,7 +25,7 @@
     <script src="lib/bootstrap.js"></script>
     <script>
       var margin = {top: 20, right: 55, bottom: 30, left: 75},
-          width  = 1000 - margin.left - margin.right,
+          width  = 600 - margin.left - margin.right,
           height = 600  - margin.top  - margin.bottom;
 
       var x = d3.scale.ordinal()
@@ -37,10 +37,12 @@
       var xAxis = d3.svg.axis()
           .scale(x)
           .orient("bottom");
+          
 
       var yAxis = d3.svg.axis()
           .scale(y)
           .orient("left");
+          .ticks(3);
 
       var line = d3.svg.line()
           .interpolate("cardinal")
