--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -46,7 +46,7 @@
       var yAxis = d3.svg.axis()
           .scale(y)
           .orient("left")
-          .domain([0, maxValue]);;
+          .domain([0, maxValue]);
 
 
       var line = d3.svg.line()
