--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -33,7 +33,7 @@
 
 
       var y = d3.scale.linear()
-          .rangeRound([height, 0]);
+          .rangeRound([height, 0])
           .domain([0, 3500]);
 
 
@@ -44,7 +44,7 @@
 
       var yAxis = d3.svg.axis()
           .scale(y)
-          .orient("left")
+          .orient("left");
 
 
 
