--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -51,8 +51,8 @@
       var line = d3.svg.line()
           .interpolate("cardinal")
           .x(function (d) { return x(d.label) + x.rangeBand() / 2; })
-          .y(function (d) { return y(d.value); })
-          .forceY([0,100]);
+          .y(function (d) { return y(d.value); });
+
 
       var color = d3.scale.ordinal()
           .range(["#101b4d","#ff4500","#475003","#9c8305","#d3c47c"]);
