--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -43,9 +43,9 @@
 
 
       var yAxis = d3.svg.axis()
-          .scale(y)
-          .orient("left")
-          .domain([0, 3500]);
+          .scale()
+          .domain([0, maxValue]);
+          //.orient("left");
 
 
 
