changed max vlaue

--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -44,7 +44,7 @@
 
       var yAxis = d3.svg.axis()
           .scale()
-          .domain([0, maxValue]);
+          .domain([0, 3500]);
           //.orient("left");
 
 
