added orient lft back in

--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -44,8 +44,8 @@
 
       var yAxis = d3.svg.axis()
           .scale()
-          .domain([0, 3500]);
-          //.orient("left");
+          .domain([0, 3500])
+          .orient("left");
 
 
 
