--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -43,7 +43,7 @@
 
 
       var yAxis = d3.svg.axis()
-          .scale()
+          .scale(y)
           .domain([0, 3500])
           .orient("left");
 
