--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -33,8 +33,8 @@
 
 
       var y = d3.scale.linear()
-            .range ([0,5000])
-            .rangeRound([height, 0]);
+            .range ([0,height]);
+  //          .rangeRound([height, 0]);
 
 
       var xAxis = d3.svg.axis()
