--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -33,7 +33,7 @@
 
 
       var y = d3.scale.linear()
-            .range ([0,height]);
+            .range ([3500, 0]);
   //          .rangeRound([height, 0]);
 
 
