--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -33,8 +33,8 @@
 
 
       var y = d3.scale.linear()
-            .range ([4000, 0 ]);
-  //          .rangeRound([height, 0]);
+
+   .rangeRound([height, 0]);
 
 
       var xAxis = d3.svg.axis()
@@ -44,7 +44,8 @@
 
       var yAxis = d3.svg.axis()
           .scale(y)
-          .orient("left");
+          .orient("left")
+          .range ([4000, 0 ]);
 
 
 
