--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -79,7 +79,8 @@
         });
 
         x.domain(data.map(function (d) { return d.quarter; }));
-        y.domain([
+        y.domain(d3.extent(data, function(d) { return d.close; }));
+    /*    y.domain([
           d3.min(seriesData, function (c) {
             return d3.min(c.values, function (d) { return d.value; });
           }),
@@ -87,7 +88,7 @@
             return d3.max(c.values, function (d) { return d.value; });
           })
         ]);
-
+*/
         svg.append("g")
             .attr("class", "x axis")
             .attr("transform", "translate(0," + height + ")")
