--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -43,8 +43,8 @@
 
       var yAxis = d3.svg.axis()
           .scale(y)
-          .orient("left")
-          .range ([4000, 0]);
+          .orient("left");
+      
 
 
 
