--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -44,7 +44,7 @@
       var yAxis = d3.svg.axis()
           .scale(y)
           .orient("left");
-      
+
 
 
 
@@ -79,8 +79,8 @@
         });
 
         x.domain(data.map(function (d) { return d.quarter; }));
-        y.domain(d3.extent(data, function(d) { return d.close; }));
-    /*    y.domain([
+
+      y.domain([
           d3.min(seriesData, function (c) {
             return d3.min(c.values, function (d) { return d.value; });
           }),
