--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -33,8 +33,8 @@
 
 
       var y = d3.scale.linear()
-              .domain([0,3000])
-              .range([0,3000]);
+              .domain([3000, 0])
+              .range([3000, 0]);
       //  .rangeRound([height, 0]);
 
 
