--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -79,10 +79,10 @@
 
         x.domain(data.map(function (d) { return d.quarter; }));
 
-/      y.domain([0
-          ,
-          d3.max(seriesData, function (c) {
-            return d3.max(c.values, function (d) { return d.value; });
+        y.domain([0,
+          d3.max(seriesData, function (c)
+          {return d3.max
+            (c.values, function (d) { return d.value; });
           })
         ]);
 
