--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -133,7 +133,7 @@
             .data(varNames.slice().reverse())
           .enter().append("g")
             .attr("class", "legend")
-            .attr("transform", function (d, i) { return "translate(55," + i * -20 + ")"; }); //translate(<x> [<y>])
+            .attr("transform", function (d, i) { return "translate(55, 55 )"; }); //translate(<x> [<y>])
 
         legend.append("rect")
             .attr("x", width - 10)
