--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -133,7 +133,7 @@
             .data(varNames.slice().reverse())
           .enter().append("g")
             .attr("class", "legend")
-            .attr("transform", function (d, i) { return "translate(20, 200 )"; }); //translate(<x> [<y>])
+            .attr("transform", function (d, i) { return "translate(0, 300 )"; }); //translate(<x> [<y>]) - moves legend
 
         legend.append("rect")
             .attr("x", width - 10)
