--- a/linechart5/multi-line-full.html
+++ b/linechart5/multi-line-full.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <h3 style="padding-left:30px;">New York City Department of Corrections Violent Incidents</h3>
+    <h3 style="padding-left:30px;">New York City Department of Corrections Inmate and Staff Violence</h3>
     <h4 style="padding-left:30px;">2014-2016</h4>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
