--- a/area/stacked-area-full.html
+++ b/area/stacked-area-full.html
@@ -25,7 +25,8 @@
     </style>
   </head>
   <body>
-    <h2 style="padding-left:60px;">Total Funding Rounds in CrunchBase by Quarter</h2>
+    <h3 style="padding-left:30px;">New York City Department of Corrections Inmate and Staff Violence</h3>
+    <h4 style="padding-left:30px;">July 2015-March 2016</h4>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
@@ -69,7 +70,7 @@
         .append("g")
           .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-      d3.csv("data/crunchbase-quarters.csv", function (error, data) {
+      d3.csv("data/DOCAgeViolenceFY16.csv", function (error, data) {
 
         var labelVar = 'quarter';
         var varNames = d3.keys(data[0])
@@ -92,7 +93,7 @@
 
         stack(seriesArr);
 
-        y.domain([0, d3.max(seriesArr, function (c) { 
+        y.domain([0, d3.max(seriesArr, function (c) {
             return d3.max(c.values, function (d) { return d.y0 + d.y; });
           })]);
 
@@ -161,7 +162,7 @@
         function removePopovers () {
           $('.popover').each(function() {
             $(this).remove();
-          }); 
+          });
         }
 
         function showPopover (d) {
@@ -171,8 +172,8 @@
             container: 'body',
             trigger: 'manual',
             html : true,
-            content: function() { 
-              return "Quarter: " + d.label + 
+            content: function() {
+              return "Quarter: " + d.label +
                      "<br/>Rounds: " + d3.format(",")(d.value ? d.value: d.y1 - d.y0); }
           });
           $(this).popover('show')
