--- a/area/stacked-area-full.html
+++ b/area/stacked-area-full.html
@@ -94,12 +94,9 @@
         stack(seriesArr);
 
 //Y AXIS - change first value in domain to set minimun
-        y.domain([1000,
-          d3.max(seriesData, function (c)
-          {return d3.max
-            (c.values, function (d) { return d.value; });
-          })
-        ]);
+        y.domain([0, d3.max(seriesArr, function (c) {
+        return d3.max(c.values, function (d) { return d.y0 + d.y; });
+        })]);
 
         svg.append("g")
             .attr("class", "x axis")
