--- a/stackedbar/stacked-bar-full.html
+++ b/stackedbar/stacked-bar-full.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<!--http://www.delimited.io/blog/2014/3/3/creating-multi-series-charts-in-d3-lines-bars-area-and-streamgraphs-->
-<!-- GITHUB https://github.com/sghall/d3-multi-series-charts -->
   <head>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet">
     <style>
       body {
-        font:11px sans-serif;
+        font: 9px sans-serif;
         color: #121401;
       }
       .axis path,
@@ -16,26 +14,17 @@
         stroke-width: 2px;
         shape-rendering: crispEdges;
       }
-      .point {
-        stroke: grey;
-        stroke-width: 3px;
-        opacity: 0;
-      }
-      .point:hover{
-        opacity: .5;
-      }
     </style>
   </head>
   <body>
-    <h3 style="padding-left:30px;">New York City Department of Corrections Inmate and Staff Violence</h3>
-    <h4 style="padding-left:30px;">July 2015-March 2016</h4>
+    <h2 style="padding-left:60px;">Total Funding Rounds in CrunchBase by Quarter</h2>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
     <script>
       var margin = {top: 20, right: 55, bottom: 30, left: 40},
-          width  = 700 - margin.left - margin.right,
-          height = 400  - margin.top  - margin.bottom;
+          width  = 1000 - margin.left - margin.right,
+          height = 500  - margin.top  - margin.bottom;
 
       var x = d3.scale.ordinal()
           .rangeRoundBands([0, width], .1);
@@ -51,20 +40,8 @@
           .scale(y)
           .orient("left");
 
-      var stack = d3.layout.stack()
-          .offset("zero")
-          .values(function (d) { return d.values; })
-          .x(function (d) { return x(d.label) + x.rangeBand() / 2; })
-          .y(function (d) { return d.value; });
-
-      var area = d3.svg.area()
-          .interpolate("cardinal")
-          .x(function (d) { return x(d.label) + x.rangeBand() / 2; })
-          .y0(function (d) { return y(d.y0); })
-          .y1(function (d) { return y(d.y0 + d.y); });
-
       var color = d3.scale.ordinal()
-          .range(["#475003","#9c8305","#d3c47c"]);
+          .range(["#001c9c","#101b4d","#475003","#9c8305","#d3c47c"]);
 
       var svg = d3.select("body").append("svg")
           .attr("width",  width  + margin.left + margin.right)
@@ -72,33 +49,27 @@
         .append("g")
           .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-      d3.csv("data/DOCAgeViolenceFY16.csv", function (error, data) {
+      d3.csv("data/crunchbase-quarters.csv", function (error, data) {
 
         var labelVar = 'quarter';
-        var varNames = d3.keys(data[0])
-            .filter(function (key) { return key !== labelVar;});
+        var varNames = d3.keys(data[0]).filter(function (key) { return key !== labelVar;});
         color.domain(varNames);
 
-        var seriesArr = [], series = {};
-        varNames.forEach(function (name) {
-          series[name] = {name: name, values:[]};
-          seriesArr.push(series[name]);
-        });
-
         data.forEach(function (d) {
-          varNames.map(function (name) {
-            series[name].values.push({name: name, label: d[labelVar], value: +d[name]});
+          var y0 = 0;
+          d.mapping = varNames.map(function (name) { 
+            return {
+              name: name,
+              label: d[labelVar],
+              y0: y0,
+              y1: y0 += +d[name]
+            };
           });
+          d.total = d.mapping[d.mapping.length - 1].y1;
         });
 
         x.domain(data.map(function (d) { return d.quarter; }));
-
-        stack(seriesArr);
-
-//Y AXIS - change first value in domain to set minimun
-        y.domain([0, d3.max(seriesArr, function (c) {
-        return d3.max(c.values, function (d) { return d.y0 + d.y; });
-        })]);
+        y.domain([0, d3.max(data, function (d) { return d.total; })]);
 
         svg.append("g")
             .attr("class", "x axis")
@@ -116,31 +87,21 @@
             .text("Number of Rounds");
 
         var selection = svg.selectAll(".series")
-          .data(seriesArr)
+            .data(data)
           .enter().append("g")
-            .attr("class", "series");
+            .attr("class", "series")
+            .attr("transform", function (d) { return "translate(" + x(d.quarter) + ",0)"; });
 
-        selection.append("path")
-          .attr("class", "streamPath")
-          .attr("d", function (d) { return area(d.values); })
+        selection.selectAll("rect")
+          .data(function (d) { return d.mapping; })
+        .enter().append("rect")
+          .attr("width", x.rangeBand())
+          .attr("y", function (d) { return y(d.y1); })
+          .attr("height", function (d) { return y(d.y0) - y(d.y1); })
           .style("fill", function (d) { return color(d.name); })
-          .style("stroke", "grey");
-
-        var points = svg.selectAll(".seriesPoints")
-          .data(seriesArr)
-          .enter().append("g")
-            .attr("class", "seriesPoints");
-
-        points.selectAll(".point")
-          .data(function (d) { return d.values; })
-          .enter().append("circle")
-           .attr("class", "point")
-           .attr("cx", function (d) { return x(d.label) + x.rangeBand() / 2; })
-           .attr("cy", function (d) { return y(d.y0 + d.y); })
-           .attr("r", "10px")
-           .style("fill",function (d) { return color(d.name); })
-           .on("mouseover", function (d) { showPopover.call(this, d); })
-           .on("mouseout",  function (d) { removePopovers(); })
+          .style("stroke", "grey")
+          .on("mouseover", function (d) { showPopover.call(this, d); })
+          .on("mouseout",  function (d) { removePopovers(); })
 
         var legend = svg.selectAll(".legend")
             .data(varNames.slice().reverse())
@@ -148,7 +109,6 @@
             .attr("class", "legend")
             .attr("transform", function (d, i) { return "translate(55," + i * 20 + ")"; });
 
-// lEGEND Start
         legend.append("rect")
             .attr("x", width - 10)
             .attr("width", 10)
@@ -162,12 +122,11 @@
             .attr("dy", ".35em")
             .style("text-anchor", "end")
             .text(function (d) { return d; });
-//LEGEND end
 
         function removePopovers () {
           $('.popover').each(function() {
             $(this).remove();
-          });
+          }); 
         }
 
         function showPopover (d) {
@@ -177,13 +136,12 @@
             container: 'body',
             trigger: 'manual',
             html : true,
-            content: function() {
-              return "Time Frame: " + d.label +
-                     "<br/>Violent Incidents: " + d3.format(",")(d.value ? d.value: d.y1 - d.y0); }
+            content: function() { 
+              return "Quarter: " + d.label + 
+                     "<br/>Rounds: " + d3.format(",")(d.value ? d.value: d.y1 - d.y0); }
           });
           $(this).popover('show')
         }
-
       });
     </script>
   </body>
