--- a/stackedbar/stacked-bar-full.html
+++ b/stackedbar/stacked-bar-full.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h2 style="padding-left:60px;">Total Funding Rounds in CrunchBase by Quarter</h2>
+    <h2 style="padding-left:60px;">New York Police Department New Hire Ethnicity</h2>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
