--- a/stackedbar/stacked-bar-full.html
+++ b/stackedbar/stacked-bar-full.html
@@ -41,7 +41,7 @@
           .orient("left");
 
       var color = d3.scale.ordinal()
-          .range(["#f26f6a","#ffcc5d","#f1f6e2","#809898"]);
+          .range(["#434a9f","#ffcc5d","#f1f6e2","#809898"]);
 
       var svg = d3.select("body").append("svg")
           .attr("width",  width  + margin.left + margin.right)
